--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,13 +98,14 @@
         </div>
     </div>
 </nav>
+<div id="top"></div>
 
 <!--下面的是需要替换的具体内容部分 -->
 {% block content %}{% endblock %}
 
 <!-- 以上是需要替换的具体的内容部分 -->
 <div id="back-to-top" class="btn btn-lg btn-info">
-    <a href="#nav-bar" style="color: #fff"><span class="glyphicon glyphicon-open"></span></a></div>
+    <a href="#top" style="color: #fff"><span class="glyphicon glyphicon-open"></span></a></div>
 <div id="templatemo_footer" class="container_wapper">
     <div class="container">
         <div class="row">
