--- a/app/templates/comment_block.html
+++ b/app/templates/comment_block.html
@@ -3,7 +3,7 @@
 
         <div class="comment-title panel-heading">
             <h3>Comments
-                <a id="comment-switch"><button class="btn btn-info">switch</button></a>
+                <a id="comment-switch"><button class="btn btn-info"><span class="glyphicon glyphicon-list"></span></button></a>
                 {% if current_user.username %}
                     <a id="comment-button" class="pull-right"><button class="btn btn-info">展示/隐藏评论编辑框</button></a>
                 {% else %}
