--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -95,7 +95,7 @@ a.more-link, #header-username{ color: #fff}
 
 /*小屏部分的CSS，主要是“回到顶部”和“侧边栏” */
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 769px){
     #back-to-top{
     position: fixed;
     bottom: 10px;
@@ -121,19 +121,19 @@ a.more-link, #header-username{ color: #fff}
         line-height: 32px;
         color: #fff !important;
         width: 50%;
-        margin: 0;
+        margin: 0 auto;
     }
 
     #home-name{
-        width: 65%;
+        width: 104px;
         margin: 0 auto;
     }
 
     #side-nav-trigger{
         display: block;
         float: left;
-        margin-right: 60px;
         margin-left: 15px;
+        margin-right: 8%;
         background-color: #35a9d8;
         border: 1px solid #ffffff;
         margin-top: 8px;
@@ -166,5 +166,19 @@ a.more-link, #header-username{ color: #fff}
 
     body{
         padding-top: 50px;
+    }
+
+    .reply-btn{
+        float: none;
+    }
+
+    /* comment block 部分 */
+    .comment-header-title{
+        font-size: 16px;
+        margin-top: 0!important;
+        margin-bottom: 0!important;
+    }
+    .comment-detail{
+        font-size: 13px;
     }
 }
