--- a/app/templates/python/python_1ch.html
+++ b/app/templates/python/python_1ch.html
@@ -7,66 +7,9 @@
     <div class="main-content">
         <div class="main-body container">
             <div class="row">
-            {% include "side_nav.html" %}
-            <div class="col-md-2 side content-wrap"  id="normal-side-nav">
-                <ul class="nav nav-pills nav-stacked">
-                    <li role="presentation" class="side-link" id="side-index">
-                        <span class="icon icon-book"></span>&nbsp;目录
-                    </li>
-                    <li role="presentation" class="side-link active">
-                        <a href="{{ url_for('python_bp.intro') }}">第一章：{{ article.name }}</a>
-                    </li>
-                    <li role="presentation" class="side-link ">
-                        <a href="{{ url_for("python_bp.sec_chapter") }}">第二章：搭建环境</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="{{ url_for("python_bp.thi_chapter") }}">第三章：快速入门</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">第四章：基本数据类型</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第一章：基本控制流</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">第二章：函数编程</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">第三章：函数编程</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">第四章：函数编程</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                    </li>
-                    <li role="presentation" class="side-link">
-                        <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-10 content content-wrap">
+            {% include "python/python_side_nav.html" %}
+
+            <div class="col-md-10 col-xs-12 content content-wrap">
                 <div class="row">
                     <div class="main-text-header col-md-12">
                         <h2>什么是Python&nbsp;&nbsp;&nbsp;<small>简单叙述&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></h2>
@@ -110,6 +53,7 @@
                             <p>
                                 当然，我们这篇教程只是入门教程，所以就无良地略过一些复杂、难懂的地方了。那么，让我们开始吧！
                             </p>
+                            <img class="img-responsive" src="../../static/images/global/learn-try.png">
                         </div>
 
                     </div>
