--- a/app/templates/python/python_2ch.html
+++ b/app/templates/python/python_2ch.html
@@ -7,66 +7,9 @@
     <div class="main-content">
         <div class="main-body container">
             <div class="row">
-            {% include "side_nav.html" %}
-                <div class="col-md-2 side content-wrap" id="normal-side-nav">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li role="presentation" class="side-link" id="side-index">
-                            <span class="icon icon-book"></span>&nbsp;目录
-                        </li>
-                        <li role="presentation" class="side-link ">
-                            <a href="{{ url_for('python_bp.intro') }}">第一章：Python前言</a>
-                        </li>
-                        <li role="presentation" class="side-link active">
-                            <a href="{{ url_for("python_bp.sec_chapter") }}">第二章：{{ article.name }}</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="{{ url_for("python_bp.thi_chapter") }}">第三章：快速入门</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">第四章：基本数据类型</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;第一章：基本控制流</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">第二章：函数编程</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">第三章：函数编程</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">第四章：函数编程</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
-                        </li>
-                        <li role="presentation" class="side-link">
-                            <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-10 content content-wrap">
+            {% include "python/python_side_nav.html" %}
+
+                <div class="col-md-10 col-xs-12 content content-wrap">
                     <div class="row">
                         <div class="main-text-header col-md-12">
                             <h2 class="display-2">安装开发环境&nbsp;&nbsp;&nbsp;</h2>
@@ -171,7 +114,7 @@
                                 <p>在安装好了具体的环境之后，是不是迫不及待的想要进行一波“骚操作”了呢？那么开始我们的第一行代码，来一个惯例的“Hello world!"吧！</p>
 
 
-                                <p>在Console里输入<code>print("Hello, world!")</code>就可以看到电脑经由你的代码打印出的第一条信息了！</p>
+                                <p>在Console里输入<code>print("Hello, world!")</code>就可以看到电脑经由你的代码打印出的第一条信息了！<strong>(print()方法可以在屏幕上打印内容）</strong></p>
                                 <pre>In [1]:print("hello world!")<br>hello world!</pre>
 
                                 <p>在Console里输入 <code>import this</code> 试试~</p>
